# ReadingList

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic_files/: alembic.ini
alembic_files/migrations_db/: env.py
alembic_files/migrations_db/versions/: 0050a77c072d_.py  0847583a3c8f_.py  21b28c30e79d_.py  e0c62369b82d_.py  e8efd50f9dd7_.py
src/: main.py
src/api/: __init__.py  auth.py  item.py  items.py  reading_list.py
src/api/dependencies/: get_current_user.py  get_services.py
src/cfg/: app.py  auth.py  db.py  logging.py
src/db/: connector.py  provider.py
src/db/models/: __init__.py  base.py  items.py  reading_list.py  user.py
src/db/repo/: app.py  base.py  sa.py
src/db/services_db/: __init__.py  user.py
src/db/services_db/items/: items.py  items_tags.py
src/db/services_db/reading_list/: reading_list.py  reading_list_tags.py  tags.py
src/schemas/: __init__.py  auth.py  items.py  reading_list.py  user.py
src/secrets_example/: db.env
src/services/: __init__.py  items.py  reading_list.py
src/services/auth/: auth.py  cookie.py  jwt_service.py  password.py  token.py
src/utils/: exceptions.py
